# viewtools_byQt

./: .gitattributes  .gitignore  CMakeLists.txt  readme.txt
android/: AndroidManifest.xml  build.gradle  readme.txt
android/assets/: config.ini
cmake/: code.cmake  install.cmake  option.cmake  platform.cmake  platform_config.cmake  qt.cmake  qt5.cmake  qt6.cmake  thirddepend.cmake
cmake/custom/qt_version/: qt5.cmake  qt6.cmake
cmake/depend/: ffmpeg.cmake  ffmpeg_runtime.cmake  ffmpeg_updateTargets.cmake
extand/: readme.txt
extand/map_by_leaflet/: resources.qrc
extand/map_by_leaflet/webview/html/: mapview.html
extand/map_by_leaflet/webview/offline/: offline.min.js
res/: res.qrc
script/: readme.txt
script/compile/: build_ffmpeg_linux.sh  build_ffmpeg_win.sh  readme.txt
script/tools/: check_linuxdeployqt.sh  deploy_mingw_dlls.sh  deploy_ucrt_dlls.sh
script/translate/: lrelease.sh  lupdate.sh  readme.txt
src/: main.cpp
src/core/: ability_manager.h  singleton.h
src/data/: readme.txt  settings_manager.cpp  settings_manager.h  translation_manager.cpp  translation_manager.h
src/event/: event_dispatcher.cpp  event_dispatcher.h
src/factory/opengl/: shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h  texturemanager.cpp  texturemanager.h
src/utils/: composite_translator.cpp  composite_translator.h  option.h
src/view/component/: circle_button.cpp  circle_button.h  joystick_wheel.cpp  joystick_wheel.h
src/view/widget/map/: map_component.cpp  map_component.h  map_display.cpp  map_display.h  map_graphicsview.cpp  map_graphicsview.h  marine_map_component.cpp  marine_map_component.h  multi_mapview.cpp  multi_mapview.h
src/view/widget/map/coordinate/: tile_coordinate.cpp  tile_coordinate.h  tile_coordinate_factory.h
src/view/widget/map/layers/: base_layer.cpp  base_layer.h  route_layer.cpp  route_layer.h  ship_layer.cpp  ship_layer.h
src/view/widget/map/mapengine/: disk_cache_manager.cpp  disk_cache_manager.h  memory_cache.cpp  memory_cache.h  online_tile_loader.cpp  online_tile_loader.h
src/view/widget/map/render/: map_renderer.cpp  map_renderer.h
src/view/widget/opengl/: opengl_object.cpp  opengl_object.h  opengl_video_widget.cpp  opengl_video_widget.h
src/view/widget/player/: base_player_widget.cpp  base_player_widget.h  ffmpeg_player_widget.cpp  ffmpeg_player_widget.h  qmedia_player_widget.cpp  qmedia_player_widget.h
src/view/window/: i18nwindow.cpp  i18nwindow.h
src/view/window/example/: example.cpp  example.h
src/view/window/example/player/: player_window.cpp
src/view/window/opengl/: baseGLScene.cpp  baseGLScene.h
src/view/window/opengl/fixedPipeline/: fixedPipelineGL.cpp  fixedPipelineGL.h
src/view/window/player/: player_window.cpp  player_window.h
temp/: qtleaflet.cpp  qtleaflet.h
ui/: ui.qrc
ui/i18n/: example_zh_CN.qm  example_zh_CN.ts
ui/qml/: example.qml
ui/style_sheet/: example.qss
